--- a/AccessReel/AccessReel/MainPage.xaml
+++ b/AccessReel/AccessReel/MainPage.xaml
@@ -13,7 +13,7 @@
             <DataTemplate x:Name="DTHomePageArticle" x:Key="TemplateArticle">
                 <VerticalStackLayout>
                     <ImageButton />
-                    <Image Source="{Binding Image}" HeightRequest="250" Aspect="AspectFit">
+                    <Image Source="{Binding Image}" HeightRequest="100" Aspect="AspectFit" Margin="1">
                         <Image.GestureRecognizers>
                             <TapGestureRecognizer Tapped="ArticleTapped"/>
                         </Image.GestureRecognizers>
@@ -23,17 +23,22 @@
                             <TapGestureRecognizer Tapped="ArticleTapped"/>
                         </Label.GestureRecognizers>
                     </Label>
-                    <Label Text="{Binding Description}" FontSize="Body" Margin="5" LineBreakMode="TailTruncation" MaxLines="4"/>
-                    <HorizontalStackLayout>
-                        <Image Source="user.png"/>
-                        <Label Text="{Binding Author}" FontSize="Caption" TextColor="DimGray" Margin="5">
-                            <Label.GestureRecognizers>
-                                <TapGestureRecognizer Tapped="AuthorTapped"/>
-                            </Label.GestureRecognizers>
-                        </Label>
-                        <Image Source="clock.png"/>
-                        <Label Text="{Binding FormattedDate}" FontSize="Caption" TextColor="Gray" Margin="5"/>
-                    </HorizontalStackLayout>
+                    <Label Text="{Binding Description}" FontSize="Body" Margin="5" LineBreakMode="WordWrap" />
+                    <VerticalStackLayout HorizontalOptions="Start" VerticalOptions="End">
+                        <HorizontalStackLayout>
+                            <Image Source="user.png"/>
+                            <Label Text="{Binding Author}" FontSize="Caption" TextColor="DimGray" Margin="5">
+                                <Label.GestureRecognizers>
+                                    <TapGestureRecognizer Tapped="AuthorTapped"/>
+                                </Label.GestureRecognizers>
+                            </Label>
+                        </HorizontalStackLayout>
+
+                        <HorizontalStackLayout>
+                            <Image Source="clock.png"/>
+                            <Label Text="{Binding FormattedDate}" FontSize="Caption" TextColor="Gray" Margin="5" LineBreakMode="WordWrap"/>
+                        </HorizontalStackLayout>
+                    </VerticalStackLayout>
                 </VerticalStackLayout>
             </DataTemplate>
 
@@ -45,21 +50,21 @@
                         </Image.GestureRecognizers>
                     </Image>
 
-                    <Label Text="{Binding Title}" TextColor="Black" FontAttributes="Bold" AbsoluteLayout.LayoutBounds="180,14, AutoSize,AutoSize" FontSize="Medium">
+                    <Label Text="{Binding Title}" TextColor="Black" FontAttributes="Bold" AbsoluteLayout.LayoutBounds="180,14, AutoSize,AutoSize" FontSize="Medium" LineBreakMode="WordWrap" WidthRequest="120">
                         <Label.GestureRecognizers>
                             <TapGestureRecognizer Tapped="FilmTapped"/>
                         </Label.GestureRecognizers>
                     </Label>
 
-                    <AbsoluteLayout Margin="10" x:Name="CriticReviewScore" AbsoluteLayout.LayoutBounds="500,25, AutoSize,AutoSize">
+                    <AbsoluteLayout Margin="10" x:Name="CriticReviewScore" AbsoluteLayout.LayoutBounds="220,70, AutoSize,AutoSize">
                         <Ellipse WidthRequest="60" HeightRequest="60" Fill="#c3184a" Stroke="#f61e5b" StrokeThickness="15" AbsoluteLayout.LayoutBounds="0,0" />
-                        <Label Text="{Binding ReviewScore}" AbsoluteLayout.LayoutBounds=".5,0.25" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Medium" TextColor="White" FontAttributes="Bold" />
-                        <Label Text="CRITIC" AbsoluteLayout.LayoutBounds="6,65" FontAttributes="Bold"/>
+                        <Label Text="{Binding ReviewScore}" AbsoluteLayout.LayoutBounds=".5,0.45" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Medium" TextColor="White" FontAttributes="Bold" />
+                        <Label Text="CRITIC" AbsoluteLayout.LayoutBounds="-50,25" FontAttributes="Bold"/>
                     </AbsoluteLayout>
 
-                    <AbsoluteLayout Margin="10" x:Name="UserReviewScore" AbsoluteLayout.LayoutBounds="470,95, AutoSize,AutoSize">
+                    <AbsoluteLayout Margin="10" x:Name="UserReviewScore" AbsoluteLayout.LayoutBounds="170,120, AutoSize,AutoSize">
                         <RoundRectangle WidthRequest="40" HeightRequest="23" Fill="#00d1e4" CornerRadius="5" AbsoluteLayout.LayoutBounds="70,25" />
-                        <Label Text="{Binding MemberReviewScore}" AbsoluteLayout.LayoutBounds="0.9,0.96" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Micro" TextColor="white" FontAttributes="Bold" />
+                        <Label Text="{Binding MemberReviewScore}" AbsoluteLayout.LayoutBounds="0.85,0.88" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Micro" TextColor="white" FontAttributes="Bold" />
                         <Label Text="Members" AbsoluteLayout.LayoutBounds="0,25" />
                     </AbsoluteLayout>
                 </AbsoluteLayout>
@@ -143,7 +148,7 @@
             </VerticalStackLayout>
             <!-- Top User Rated Reviews -->
             <VerticalStackLayout BackgroundColor="#f8f8f8">
-                <Label x:Name="LblTopUserReviews" Text="Top User Rated Reviews"
+                <Label x:Name="LblTopUserReviews" Text="Top User Rated Reviews" LineBreakMode="WordWrap"
                        Margin="0,0,0,50"
                        BackgroundColor="#5192e3" Style="{StaticResource HomePageHeaders}"/>
                 <CollectionView x:Name="CVUserReviews" ItemTemplate="{StaticResource TemplateUserReviews}">
