--- a/AccessReel/AccessReel/MainPage.xaml
+++ b/AccessReel/AccessReel/MainPage.xaml
@@ -12,7 +12,7 @@
             <!-- Template for articles on the home page. Used by Latest News, Latest Interviews, Latest Reviews -->
             <DataTemplate x:Name="DTHomePageArticle" x:Key="TemplateArticle">
                 <VerticalStackLayout Padding="0,10" >
-                    <Image Source="{Binding Image}" HeightRequest="150" Aspect="AspectFit" WidthRequest="300" HorizontalOptions="Start">
+                    <Image Source="{Binding Image}" HeightRequest="150" Aspect="AspectFit" WidthRequest="300" HorizontalOptions="Center">
                         <Image.GestureRecognizers>
                             <TapGestureRecognizer Tapped="ArticleTapped"/>
                         </Image.GestureRecognizers>
@@ -44,21 +44,21 @@
                         </Image.GestureRecognizers>
                     </Image>
 
-                    <Label Text="{Binding Title}" TextColor="Black" FontAttributes="Bold" AbsoluteLayout.LayoutBounds="180,14, AutoSize,AutoSize" FontSize="Medium">
+                    <Label Text="{Binding Title}" TextColor="Black" FontAttributes="Bold" AbsoluteLayout.LayoutBounds="180,14, AutoSize,AutoSize" FontSize="Medium" LineBreakMode="WordWrap" MaximumWidthRequest="200">
                         <Label.GestureRecognizers>
                             <TapGestureRecognizer Tapped="FilmTapped"/>
                         </Label.GestureRecognizers>
                     </Label>
 
-                    <AbsoluteLayout Margin="10" x:Name="CriticReviewScore" AbsoluteLayout.LayoutBounds="500,25, AutoSize,AutoSize">
+                    <AbsoluteLayout Margin="10" x:Name="CriticReviewScore" AbsoluteLayout.LayoutBounds="270,35, AutoSize,AutoSize">
                         <Ellipse WidthRequest="60" HeightRequest="60" Fill="#c3184a" Stroke="#f61e5b" StrokeThickness="15" AbsoluteLayout.LayoutBounds="0,0" />
-                        <Label Text="{Binding ReviewScore}" AbsoluteLayout.LayoutBounds=".5,0.25" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Medium" TextColor="White" FontAttributes="Bold" />
+                        <Label Text="{Binding ReviewScore}" AbsoluteLayout.LayoutBounds=".5,0.3" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Medium" TextColor="White" FontAttributes="Bold" />
                         <Label Text="CRITIC" AbsoluteLayout.LayoutBounds="6,65" FontAttributes="Bold"/>
                     </AbsoluteLayout>
 
-                    <AbsoluteLayout Margin="10" x:Name="UserReviewScore" AbsoluteLayout.LayoutBounds="470,95, AutoSize,AutoSize">
+                    <AbsoluteLayout Margin="10" x:Name="UserReviewScore" AbsoluteLayout.LayoutBounds="220,95, AutoSize,AutoSize">
                         <RoundRectangle WidthRequest="40" HeightRequest="23" Fill="#00d1e4" CornerRadius="5" AbsoluteLayout.LayoutBounds="70,25" />
-                        <Label Text="{Binding MemberReviewScore}" AbsoluteLayout.LayoutBounds="0.9,0.96" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Micro" TextColor="white" FontAttributes="Bold" />
+                        <Label Text="{Binding MemberReviewScore}" AbsoluteLayout.LayoutBounds="0.875,0.90" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Small" TextColor="white" FontAttributes="Bold" />
                         <Label Text="Members" AbsoluteLayout.LayoutBounds="0,25" />
                     </AbsoluteLayout>
                 </AbsoluteLayout>
