--- a/AccessReel/AccessReel/ListPage.xaml
+++ b/AccessReel/AccessReel/ListPage.xaml
@@ -92,11 +92,10 @@
                             <TapGestureRecognizer Tapped="ItemTapped"/>
                         </Image.GestureRecognizers>
                     </Image>
-                    <Label x:Name="Title" Text="listPage" AbsoluteLayout.LayoutBounds="5,220" FontSize="Title" FontAttributes="Bold" Opacity="50" TextColor="White" Background="#301c10">
-                        <Label.GestureRecognizers>
-                            <TapGestureRecognizer Tapped="ItemTapped"/>
-                        </Label.GestureRecognizers>
-                    </Label>
+                    <AbsoluteLayout HorizontalOptions="CenterAndExpand">
+                        <Image x:Name="Banner" Margin="10" WidthRequest="400"  HeightRequest="200" Aspect="AspectFit" />
+                        <Label x:Name="Title" Text="" AbsoluteLayout.LayoutBounds="20,160" FontAttributes="Bold" FontSize="25" TextColor="White" BackgroundColor="DarkGray"/>
+                    </AbsoluteLayout>
                 </AbsoluteLayout>
                 <Picker x:Name="Sorter" SelectedIndexChanged="Sorter_SelectedIndexChanged" SelectedIndex="0" HorizontalOptions="CenterAndExpand" WidthRequest="375"  BackgroundColor="LightGray" SelectedItem="0">
                     <Picker.Shadow>
