--- a/AccessReel/AccessReel/MainPage.xaml
+++ b/AccessReel/AccessReel/MainPage.xaml
@@ -56,15 +56,15 @@
                         </Label.GestureRecognizers>
                     </Label>
 
-                    <AbsoluteLayout Margin="10" x:Name="CriticReviewScore" AbsoluteLayout.LayoutBounds="220,70, AutoSize,AutoSize">
+                    <AbsoluteLayout Margin="10" x:Name="CriticReviewScore" AbsoluteLayout.LayoutBounds="220,170, AutoSize,AutoSize">
                         <Ellipse WidthRequest="60" HeightRequest="60" Fill="#c3184a" Stroke="#f61e5b" StrokeThickness="15" AbsoluteLayout.LayoutBounds="0,0" />
                         <Label Text="{Binding ReviewScore}" AbsoluteLayout.LayoutBounds=".5,0.45" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Medium" TextColor="White" FontAttributes="Bold" />
-                        <Label Text="CRITIC" AbsoluteLayout.LayoutBounds="-50,25" FontAttributes="Bold"/>
+                        <Label Text="CRITIC" AbsoluteLayout.LayoutBounds="-50,35" FontAttributes="Bold"/>
                     </AbsoluteLayout>
 
                     <AbsoluteLayout Margin="10" x:Name="UserReviewScore" AbsoluteLayout.LayoutBounds="170,120, AutoSize,AutoSize">
                         <RoundRectangle WidthRequest="40" HeightRequest="23" Fill="#00d1e4" CornerRadius="5" AbsoluteLayout.LayoutBounds="70,25" />
-                        <Label Text="{Binding MemberReviewScore}" AbsoluteLayout.LayoutBounds="0.85,0.88" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Micro" TextColor="white" FontAttributes="Bold" />
+                        <Label Text="{Binding MemberReviewScore}" AbsoluteLayout.LayoutBounds="0.85,0.90" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="15" TextColor="white" FontAttributes="Bold" />
                         <Label Text="Members" AbsoluteLayout.LayoutBounds="0,25" />
                     </AbsoluteLayout>
                 </AbsoluteLayout>
@@ -80,21 +80,21 @@
             <CarouselView x:Name="CVImageheader" IndicatorView="IImageHeader" HorizontalOptions="FillAndExpand" >
                 <CarouselView.ItemTemplate>
                     <DataTemplate>
-                        <Frame HorizontalOptions="Center" BackgroundColor="White" BorderColor="White" HeightRequest="380" WidthRequest="1150">
+                        <Frame HorizontalOptions="Center" BackgroundColor="White" BorderColor="White" HeightRequest="350" WidthRequest="1450">
                             <AbsoluteLayout HorizontalOptions="Center">
-                                <Image Source="{Binding Image}" Aspect="AspectFill" HeightRequest="350" WidthRequest="1110">
+                                <Image Source="{Binding Image}" Aspect="AspectFill" HeightRequest="300" WidthRequest="400">
                                     <Image.GestureRecognizers>
                                         <TapGestureRecognizer Tapped="FilmTapped"/>
                                     </Image.GestureRecognizers>
                                 </Image>
-                                <Label Text="{Binding Title}" TextColor="White" Opacity="50"  AbsoluteLayout.LayoutBounds="0,240" FontSize="Large" Margin="10">
+                                <Label Text="{Binding Title}" TextColor="White" BackgroundColor="DarkGray" Opacity="50"  AbsoluteLayout.LayoutBounds="40,240" FontSize="Large" Margin="10">
                                     <Label.GestureRecognizers>
                                         <TapGestureRecognizer Tapped="FilmTapped"/>
                                     </Label.GestureRecognizers>
                                 </Label>
                                 <!--Critic-->
-                                <AbsoluteLayout Margin="10" x:Name="CriticReviewScore" AbsoluteLayout.LayoutBounds="840,200, AutoSize,AutoSize">
-                                    <Label Text="CRITIC" AbsoluteLayout.LayoutBounds="89,60" FontAttributes="Bold" TextColor="White"/>
+                                <AbsoluteLayout Margin="10" x:Name="CriticReviewScore" AbsoluteLayout.LayoutBounds="200,0, AutoSize,AutoSize">
+                                    <Label Text="CRITIC" AbsoluteLayout.LayoutBounds="0,0" FontAttributes="Bold" TextColor="White"/>
                                     <Ellipse WidthRequest="60" HeightRequest="60" Fill="#c3184a" Stroke="#f61e5b" StrokeThickness="15" AbsoluteLayout.LayoutBounds="80,1"/>
                                     <Label Text="{Binding ReviewScore}" AbsoluteLayout.LayoutBounds="0.82,0.35" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Medium" TextColor="White" FontAttributes="Bold"/>
                                 </AbsoluteLayout>
