--- a/AccessReel/AccessReel/ListPage.xaml
+++ b/AccessReel/AccessReel/ListPage.xaml
@@ -12,18 +12,21 @@
             <!-- Template for movies articles -->
             <DataTemplate x:Name="DTMovieArticle" x:Key="templateMA">
                 <Grid HorizontalOptions="CenterAndExpand" Padding="5">
+                    <Grid.RowDefinitions>
+                        <RowDefinition />
+                        <RowDefinition />
+                    </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="3*"/>
                         <ColumnDefinition Width="5*"/>
                         <ColumnDefinition Width="2*"/>
                     </Grid.ColumnDefinitions>
-                    <Image Grid.Column="0" Margin="1" Source="{Binding Image}" HeightRequest="100" VerticalOptions="Start">
+                    <Image Grid.Row="0" Grid.Column="0" Margin="1" Source="{Binding Image}" VerticalOptions="Start" HeightRequest="130" WidthRequest="250">
                         <Image.GestureRecognizers>
                             <TapGestureRecognizer Tapped="ItemTapped"/>
                         </Image.GestureRecognizers>
                     </Image>
 
-                    <VerticalStackLayout Grid.Column="1" Margin="5">
+                    <VerticalStackLayout Grid.Row="1" Grid.Column="0" Margin="5" Grid.ColumnSpan="2">
                         <Label Text="{Binding Title}" FontAttributes="Bold" FontSize="Medium" Margin="0,10,0,0">
                             <Label.GestureRecognizers>
                                 <TapGestureRecognizer Tapped="ItemTapped"/>
@@ -39,12 +42,12 @@
                             <Label Text="{Binding FormattedDate}" FontSize="Caption" TextColor="DarkGray" Margin="5"/>
                         </HorizontalStackLayout>
                     </VerticalStackLayout>
-                    <AbsoluteLayout Grid.Column="2" Margin="10" x:Name="AbsLayoutReviewScore">
+                    <AbsoluteLayout Grid.Row="0" Grid.Column="2" Margin="5,35" x:Name="AbsLayoutReviewScore">
                         <Ellipse WidthRequest="60" HeightRequest="60" Fill="#c3184a" Stroke="#f61e5b" StrokeThickness="15" IsVisible="{Binding ReviewScore, Converter={StaticResource NotEmptyStringConverters}}"/>
                         <Label Text="{Binding ReviewScore}" AbsoluteLayout.LayoutBounds="{Binding ReviewScore, Converter={StaticResource ReviewScoreToAbsLayoutConverter}}" 
                                AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Medium" 
                                TextColor="White" FontAttributes="Bold"  
-                               Margin="15,-10,0,0"/>
+                               Margin="7.5,14,0,0"/>
                     </AbsoluteLayout>
                 </Grid>
             </DataTemplate>
@@ -94,7 +97,7 @@
                     </Image>
                     <AbsoluteLayout HorizontalOptions="CenterAndExpand">
                         <Image x:Name="Banner" Margin="10" WidthRequest="400"  HeightRequest="200" Aspect="AspectFit" />
-                        <Label x:Name="Title" Text="" AbsoluteLayout.LayoutBounds="20,160" FontAttributes="Bold" FontSize="25" TextColor="White" BackgroundColor="DarkGray"/>
+                        <Label x:Name="Title" Text="" AbsoluteLayout.LayoutBounds="20,160" FontAttributes="Bold" FontSize="25" TextColor="White" />
                     </AbsoluteLayout>
                 </AbsoluteLayout>
                 <Picker x:Name="Sorter" SelectedIndexChanged="Sorter_SelectedIndexChanged" SelectedIndex="0" HorizontalOptions="CenterAndExpand" WidthRequest="375"  BackgroundColor="LightGray" SelectedItem="0">
