--- a/AccessReel/AccessReel/MainPage.xaml
+++ b/AccessReel/AccessReel/MainPage.xaml
@@ -56,15 +56,15 @@
                         </Label.GestureRecognizers>
                     </Label>
 
-                    <AbsoluteLayout Margin="10" x:Name="CriticReviewScore" AbsoluteLayout.LayoutBounds="220,170, AutoSize,AutoSize">
+                    <AbsoluteLayout Margin="10" x:Name="CriticReviewScore" AbsoluteLayout.LayoutBounds="270,55, AutoSize,AutoSize">
                         <Ellipse WidthRequest="60" HeightRequest="60" Fill="#c3184a" Stroke="#f61e5b" StrokeThickness="15" AbsoluteLayout.LayoutBounds="0,0" />
-                        <Label Text="{Binding ReviewScore}" AbsoluteLayout.LayoutBounds=".5,0.45" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Medium" TextColor="White" FontAttributes="Bold" />
-                        <Label Text="CRITIC" AbsoluteLayout.LayoutBounds="-50,35" FontAttributes="Bold"/>
+                        <Label Text="{Binding ReviewScore}" AbsoluteLayout.LayoutBounds=".5,0.3" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Medium" TextColor="White" FontAttributes="Bold" />
+                        <Label Text="CRITIC" AbsoluteLayout.LayoutBounds="6,65" FontAttributes="Bold"/>
                     </AbsoluteLayout>
 
-                    <AbsoluteLayout Margin="10" x:Name="UserReviewScore" AbsoluteLayout.LayoutBounds="170,120, AutoSize,AutoSize">
+                    <AbsoluteLayout Margin="10" x:Name="UserReviewScore" AbsoluteLayout.LayoutBounds="220,115, AutoSize,AutoSize">
                         <RoundRectangle WidthRequest="40" HeightRequest="23" Fill="#00d1e4" CornerRadius="5" AbsoluteLayout.LayoutBounds="70,25" />
-                        <Label Text="{Binding MemberReviewScore}" AbsoluteLayout.LayoutBounds="0.85,0.90" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="15" TextColor="white" FontAttributes="Bold" />
+                        <Label Text="{Binding MemberReviewScore}" AbsoluteLayout.LayoutBounds="0.875,0.90" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="15" TextColor="white" FontAttributes="Bold" />
                         <Label Text="Members" AbsoluteLayout.LayoutBounds="0,25" />
                     </AbsoluteLayout>
                 </AbsoluteLayout>
@@ -87,7 +87,7 @@
                                         <TapGestureRecognizer Tapped="FilmTapped"/>
                                     </Image.GestureRecognizers>
                                 </Image>
-                                <Label Text="{Binding Title}" TextColor="White" BackgroundColor="DarkGray" Opacity="50"  AbsoluteLayout.LayoutBounds="40,240" FontSize="Large" Margin="10">
+                                <Label Text="{Binding Title}" TextColor="White" Opacity="50"  AbsoluteLayout.LayoutBounds="40,240" FontSize="Large" Margin="10">
                                     <Label.GestureRecognizers>
                                         <TapGestureRecognizer Tapped="FilmTapped"/>
                                     </Label.GestureRecognizers>
