--- a/AccessReel/AccessReel/FlyoutMenu.xaml
+++ b/AccessReel/AccessReel/FlyoutMenu.xaml
@@ -10,9 +10,17 @@
         
         <ContentPage Title="Flyout Menu">            
             <StackLayout>
-                <Button x:Name="BtnCloseMenu" Text="X" 
-                        Clicked="BtnCloseMenu_Clicked" HorizontalOptions="End"
-                        FontAttributes="Bold" FontSize="Medium"/>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="85*"/>
+                        <ColumnDefinition Width="15*"/>
+                    </Grid.ColumnDefinitions>
+                    <SearchBar Grid.Column="0" x:Name="AccessReelSearchbar" SearchButtonPressed="AccessReelSearchbar_SearchButtonPressed" Placeholder="search the site" HorizontalOptions="StartAndExpand"/>
+                    <Button Grid.Column="1" x:Name="BtnCloseMenu" Text="X" TextColor="White" BackgroundColor="Red"
+                            Clicked="BtnCloseMenu_Clicked" HorizontalOptions="End"
+                            FontAttributes="Bold" FontSize="Medium"/>
+                </Grid>
+
                 <Button x:Name="BtnHomePage" Text="Home" Clicked="BtnHomePage_Clicked" HorizontalOptions="Fill" CornerRadius="0" BorderColor="LightGray" BorderWidth="1"/>
                 <Button x:Name="BtnNewsPage" Text="News" Clicked="BtnNewsPage_Clicked" HorizontalOptions="Fill" CornerRadius="0" BorderColor="LightGray" BorderWidth="1"/>
                 <Button x:Name="BtnReviewPage" Text="Reviews" Clicked="BtnReviewPage_Clicked" CornerRadius="0" BorderColor="LightGray" BorderWidth="1"/>
