--- a/AccessReel/AccessReel/ArticlePage.xaml
+++ b/AccessReel/AccessReel/ArticlePage.xaml
@@ -5,11 +5,13 @@
              Title="">
     
     <ScrollView>
-        <VerticalStackLayout x:Name="ArticleLayout" HorizontalOptions="Center" WidthRequest="800">
-            <Label x:Name="articleTitle" Text="Article Title" HorizontalOptions="Start" FontAttributes="Bold" LineBreakMode="WordWrap" VerticalOptions="StartAndExpand" WidthRequest="400" Margin="10" FontSize="20"/>
+        <VerticalStackLayout x:Name="ArticleLayout" HorizontalOptions="Center" WidthRequest="380">
+            <Label x:Name="articleTitle" Text="Article Title" HorizontalOptions="StartAndExpand" 
+                   FontAttributes="Bold" LineBreakMode="WordWrap" VerticalOptions="StartAndExpand" 
+                    Margin="10" FontSize="20"/>
             <Image x:Name="banner" Margin="10" WidthRequest="380" Aspect="AspectFit" HorizontalOptions="Start"/>
-            <StackLayout x:Name="contentStackLayout" Margin="10" WidthRequest="380" HorizontalOptions="Start">
-                <ContentView x:Name="FilmReviewContainer" />
+            <StackLayout x:Name="contentStackLayout" Margin="10" WidthRequest="360" HorizontalOptions="Start">
+                <ContentView x:Name="FilmReviewContainer" WidthRequest="360" />
             </StackLayout>
             <Button Text="AccessReel" 
                     BackgroundColor="Black" 
