--- a/AccessReel/AccessReel/MainPage.xaml
+++ b/AccessReel/AccessReel/MainPage.xaml
@@ -161,7 +161,7 @@
                 <Label x:Name="LblTrailers" Text=" New Trailers" 
                        BackgroundColor="#e17132" Style="{StaticResource HomePageHeaders}" Margin="0,0,0,10"/>
 
-                <CarouselView x:Name="CVTrailers" IndicatorView="ITrailers" HorizontalOptions="CenterAndExpand" VerticalOptions="FillAndExpand" >
+                <CarouselView x:Name="CVTrailers" IndicatorView="ITrailers" HorizontalOptions="CenterAndExpand" WidthRequest="150" VerticalOptions="FillAndExpand" >
                     <CarouselView.ItemTemplate>
                         <DataTemplate>
                             <HorizontalStackLayout HorizontalOptions="Center">
