final build test
ready to demo

--- a/AccessReel/AccessReel/FilmReviewContent.xaml
+++ b/AccessReel/AccessReel/FilmReviewContent.xaml
@@ -26,7 +26,7 @@
                 <ColumnDefinition Width="0.5*"/>
             </Grid.ColumnDefinitions>
             <!-- Review -->
-            <Label Grid.Row="0" Grid.Column="1" x:Name="LblReview" Text="ReviewPlaceholder" TextType="Html" HorizontalOptions="Center" Margin="0,40,0,0" LineBreakMode="WordWrap"/>
+            <Label Grid.Row="0" Grid.Column="1" x:Name="LblReview" Text="" TextType="Html" HorizontalOptions="Center" Margin="0,40,0,0" LineBreakMode="WordWrap"/>
 
             <!-- Tags -->
             <StackLayout Grid.Row="1" Grid.Column="1" x:Name="TagsStackLayout" Margin="0,20,0,0">
@@ -35,8 +35,8 @@
 
             <HorizontalStackLayout Grid.Row="2" Grid.Column="1" HorizontalOptions="Center" >
                 <HorizontalStackLayout>
-                    <Image x:Name="ImageAuthor" Source="dotnet_bot.png" HeightRequest="60" WidthRequest="60" Margin="5"/>
-                    <Label  x:Name="LblAuthor" Text="ReviewAuthor" VerticalOptions="Center" BackgroundColor="Black" TextColor="White">
+                    <Image x:Name="ImageAuthor" HeightRequest="60" WidthRequest="60" Margin="5"/>
+                    <Label  x:Name="LblAuthor" Text="" VerticalOptions="Center" BackgroundColor="Black" TextColor="White">
                         <Label.GestureRecognizers>
                             <TapGestureRecognizer Tapped="AuthorTapped"/>
                         </Label.GestureRecognizers>
