--- a/AccessReel/AccessReel/MainPage.xaml
+++ b/AccessReel/AccessReel/MainPage.xaml
@@ -161,7 +161,8 @@
                 <Label x:Name="LblTrailers" Text=" New Trailers" 
                        BackgroundColor="#e17132" Style="{StaticResource HomePageHeaders}" Margin="0,0,0,10"/>
 
-                <CarouselView x:Name="CVTrailers" IndicatorView="ITrailers" HorizontalOptions="CenterAndExpand" VerticalOptions="FillAndExpand" PeekAreaInsets="200">
+                <CarouselView x:Name="CVTrailers" IndicatorView="ITrailers" HorizontalOptions="CenterAndExpand" VerticalOptions="FillAndExpand" >
+                    <!--PeekAreaInsets="200"-->
                     <CarouselView.ItemTemplate>
                         <DataTemplate>
                             <HorizontalStackLayout HorizontalOptions="Center" HeightRequest="250">
